--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "start:http-backend": "bun run prisma:migrate && bun run apps/http-backend/src/index.ts",
+    "start:ws-backend": "bun run prisma:migrate && bun run apps/ws-backend/src/index.ts",
+    "start:frontend" : "bun run prisma:migrate && cd apps/frontend && bun run start",
+    "prisma:migrate" : "cd packages/db && bun prisma migrate dev",
+    "prisma:generate": "cd packages/db && bun prisma generate"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
