--- a/.github/workflows/cd_backend.yml
+++ b/.github/workflows/cd_backend.yml
@@ -16,4 +16,12 @@ on:
             username: ${{ secrets.DOCKERHUB_USERNAME }}
             password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
+        - name: Build and Push Docker Image
+          uses: docker/build-push-action@v3
+          with:
+            context: .
+            file: ./docker/Dockerfile.backend
+            push: true
+            tags: ${{ secrets.DOCKERHUB_USERNAME }}/backend:${{ github.sha }}
+
      
