--- a/.github/workflows/cd_backend.yml
+++ b/.github/workflows/cd_backend.yml
@@ -1,27 +1,31 @@
-name: Deplo the backend
+name: Deploy backend
 on:
   push:
-    branches: [main]
+    branches: [ main ]
 
-  jobs:
-    build:
-      runs-on: ubuntu-latest
-      steps:
-        - name : Checkout repository
-          uses: actions/checkout@v2
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-        - name: Docker Login
-          uses: docker/login-action@v2
-          with:
-            username: ${{ secrets.DOCKERHUB_USERNAME }}
-            password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-        - name: Build and Push Docker Image
-          uses: docker/build-push-action@v3
-          with:
-            context: .
-            file: ./docker/Dockerfile.backend
-            push: true
-            tags: ${{ secrets.DOCKERHUB_USERNAME }}/backend:${{ github.sha }}
+      - name: Docker Login
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-     
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v6
+        with:
+          context: ./backend
+          file: ./backend/Dockerfile
+          push: true
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/backend:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/backend:${{ github.sha }}
+         
