--- a/.github/workflows/cd_backend.yml
+++ b/.github/workflows/cd_backend.yml
@@ -20,7 +20,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./backend/Dockerfile
+          file: ./docker/Dockerfile.backend
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/backend:latest
