--- a/.github/workflows/cd_backend.yml
+++ b/.github/workflows/cd_backend.yml
@@ -36,4 +36,4 @@ jobs:
             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/backend:latest
             docker stop backend || true
             docker rm backend || true
-            docker run -d --name backend -p 80:80 ${{ secrets.DOCKERHUB_USERNAME }}/backend:latest
+            docker run -d --name backend -p 8081:8081 -e DATABASE_URL=${{ secrets.DATABASE_URL }} ${{ secrets.DOCKERHUB_USERNAME }}/backend:latest
