--- a/.github/workflows/cd_backend.yml
+++ b/.github/workflows/cd_backend.yml
@@ -36,4 +36,4 @@ jobs:
             sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/backend:latest
             sudo docker stop backend || true
             sudo docker rm backend || true
-            sudo docker run -d --name backend -p 8081:8081 -e DATABASE_URL=${{ secrets.DATABASE_URL }} ${{ secrets.DOCKERHUB_USERNAME }}/backend:latest
+            sudo docker run -d --name backend -p 8081:8081 -e DATABASE_URL="${{ secrets.DATABASE_URL }}"" ${{ secrets.DOCKERHUB_USERNAME }}/backend:latest
