--- a/.github/workflows/cd_frontend.yml
+++ b/.github/workflows/cd_frontend.yml
@@ -43,7 +43,7 @@ jobs:
             ${{ secrets.DOCKERHUB_USERNAME }}/websocket:latest
             ${{ secrets.DOCKERHUB_USERNAME }}/websocket:${{ github.sha }}
 
-      - name: Deploy to remote server via SSH
+      - name: Deploy frontend to remote server via SSH
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
